--- a/HomeWork2.ipynb
+++ b/HomeWork2.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "word = 'Kukkabar'\n",
+    "word = 'testing'\n",
     "lenOfWord = len(word)\n",
     "if lenOfWord%2 == 0:\n",
     "    print(word[int(lenOfWord/2 - 1)]+word[int(lenOfWord/2)])\n",
